post pics on mobile fix; version up

--- a/wp-content/themes/akfgfragments/style.css
+++ b/wp-content/themes/akfgfragments/style.css
@@ -5,7 +5,7 @@ Author: Timofey Gribanov
 Author URI: https://github.com/TimaGribanov
 Description: A simple but effective WordPress theme for akfgfragments – international Asian Kung-Fu Generation fan project.
 Text Domain: akfgfragments
-Version: 0.2.5-beta
+Version: 0.2.6-beta
 */
 
 /*************/
@@ -262,7 +262,7 @@ strong {
 }
 
 @media (max-width: 1120px) {
-    header > .navbar > .main-wrapper > .header-lang-selector {
+    header>.navbar>.main-wrapper>.header-lang-selector {
         display: none;
     }
 }
@@ -435,10 +435,12 @@ strong {
     color: var(--text-colour);
 }
 
-/*.wp-block-image img {
-    width: 100%;
-    height: auto;
-}*/
+@media (max-width: 991px) {
+    .wp-block-image img {
+        width: 100%;
+        height: auto;
+    }
+}
 
 .wp-block-image .aligncenter {
     text-align: center;
